--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+  <i class="fa fa-play" aria-hidden="true"></i>
 <h1 style="color:blue; font-size:16pt">
   <a href="#"><b>Коала</b> — Википедия</a>
   <br>
