--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
 
     <div>
-      <button class="js-play-button">
-        <i class="fa fa-play" aria-hidden="true"></i>
+      <button class="js-play-button" style="border-style:none">
+        <i style="border-style:none" class="fa fa-play" aria-hidden="true"></i>
       </button>      
-      <button class="js-pause-button" hidden>
+      <button class="js-pause-button" style="border-style:none" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
       <button class="js-volume-button">Volume</button>
