--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
   <div id="player" style="width: 800px; height: 600px;">
 
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
-
-    <div>
+    <div style="background-color:black;">
       <button class="js-play-button" style="border-style:none; cursor:pointer;">
         <i style="border-style:none" class="fa fa-play" aria-hidden="true"></i>
       </button>      
       <button class="js-pause-button" style="border-style:none; cursor:pointer;" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
-      <button class="js-volume-button">Volume</button>
-      <button class="js-mute-button" hidden>Mute</button>
-      <button class="js-fullscreen-button">Fullscreen</button>
+      <button class="js-volume-button" style="border-style:none; cursor:pointer;">Volume</button>
+      <button class="js-mute-button" style="border-style:none; cursor:pointer;" hidden>Mute</button>
+      <button class="js-fullscreen-button" style="border-style:none; cursor:pointer;">Fullscreen</button>
     </div>
     <div style="color: white;">
       <span class="js-current-time"></span>
