--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color:black;">
-      <button class="js-play-button" style="border-style:none; cursor:pointer;">
+      <button class="js-play-button" style="border-style:none; cursor:pointer; color: white;">
         <i style="border-style:none" class="fa fa-play" aria-hidden="true"></i>
       </button>      
-      <button class="js-pause-button" style="border-style:none; cursor:pointer;" hidden>
+      <button class="js-pause-button" style="border-style:none; cursor:pointer; color: white;" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
       <button class="js-volume-button" style="border-style:none; cursor:pointer;">Volume</button>
