make button background transparent

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color:black;">
-      <button class="js-play-button" style="border-style:none; cursor:pointer; color: white;">
+      <button class="js-play-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">
         <i style="border-style:none" class="fa fa-play" aria-hidden="true"></i>
       </button>      
-      <button class="js-pause-button" style="border-style:none; cursor:pointer; color: white;" hidden>
+      <button class="js-pause-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
-      <button class="js-volume-button" style="border-style:none; cursor:pointer;">Volume</button>
-      <button class="js-mute-button" style="border-style:none; cursor:pointer;" hidden>Mute</button>
-      <button class="js-fullscreen-button" style="border-style:none; cursor:pointer;">Fullscreen</button>
+      <button class="js-volume-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">Volume</button>
+      <button class="js-mute-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;" hidden>Mute</button>
+      <button class="js-fullscreen-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">Fullscreen</button>
     </div>
     <div style="color: white;">
       <span class="js-current-time"></span>
