--- a/index.html
+++ b/index.html
@@ -4,30 +4,59 @@
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <style>
+    .player {
+      width: 800px; 
+      height: 600px;
+    }
+    .container {
+      width: 100%; 
+      height: 100%
+    }
+    .background-button {
+      background-color:black;
+    }
+    .button { 
+      border-style:none; 
+      cursor:pointer; color: white; 
+      background-color: transparent;
+    }
+    .line-below {
+      color: white;
+    }
+    .progress-bar{
+      background-color: grey;
+    }
+    .progress-dinamic-bar{
+      background-color: red;
+    }
+   </style>
 </head>
-<body>
-  <div id="player" style="width: 800px; height: 600px;">
 
-    <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <div style="background-color:black;">
-      <button class="js-play-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">
-        <i style="border-style:none" class="fa fa-play" aria-hidden="true"></i>
+<body>
+
+  <div id="player" class="player">
+
+    <div class="container js-video-container"></div>
+    <div class="background-button">
+      <button class="button js-play-button">
+        <i class="fa fa-play" aria-hidden="true"></i>
       </button>      
-      <button class="js-pause-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;" hidden>
+      <button class="button js-pause-button" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
-      <button class="js-volume-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">Volume</button>
-      <button class="js-mute-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;" hidden>Mute</button>
-      <button class="js-fullscreen-button" style="border-style:none; cursor:pointer; color: white; background-color: transparent;">Fullscreen</button>
+      <button class="button js-volume-button">Volume</button>
+      <button class="button js-mute-button" hidden>Mute</button>
+      <button class="button js-fullscreen-button">Fullscreen</button>
     </div>
-    <div style="color: white;">
+    <div class="line-below">
       <span class="js-current-time"></span>
       —
       <span class="js-duration"></span>
     </div>
 
-    <div class="js-progress" style="background-color: grey;">
-      <div class="js-progress-slider" style="background-color: red;">Прогресс</div>
+    <div class="progress-bar js-progress">
+      <div class="progress-dinamic-bar js-progress-slider">Прогресс</div>
     </div>
   </div>
 
