--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     .player {
       width: 800px; 
       height: 600px;
+      box-shadow: 0 0 5px 2px;
     }
     .container {
       width: 100%; 
