--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <style>
     .player {
-      width: 800px; 
-      height: 600px;
-      box-shadow: 0 0 5px 2px;
+      display: flex;
+      flex-direction:column;
+      width: 1000px; 
+      height: 800px;
+      box-shadow: 0 0 7px 4px;
     }
     .container {
-      width: 100%; 
-      height: 100%
+      flex-grow: 1;
     }
     .background-button {
       background-color:black;
@@ -23,10 +24,16 @@
       background-color: transparent;
     }
     .line-below {
-      color: white;
+      color: rgb(255, 255, 255);
+      background-color: black;
+      padding-top: 10px;
+      padding-left: 4px;
+      padding-bottom: 10px;
     }
     .progress-bar{
-      background-color: grey;
+      background-color: black;
+      color: white;
+      padding-left: 4px;
     }
     .progress-dinamic-bar{
       background-color: red;
@@ -37,19 +44,19 @@
 <body>
 
   <div id="player" class="player">
-
     <div class="container js-video-container"></div>
     <div class="background-button">
       <button class="button js-play-button">
         <i class="fa fa-play" aria-hidden="true"></i>
-      </button>      
+      </button>
       <button class="button js-pause-button" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
       <button class="button js-volume-button">Volume</button>
       <button class="button js-mute-button" hidden>Mute</button>
       <button class="button js-fullscreen-button">Fullscreen</button>
-    </div>
+    </div>   
+
     <div class="line-below">
       <span class="js-current-time"></span>
       —
