--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
       <button class="button js-pause-button" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
-      <button class="button js-volume-button">Volume</button>
-      <button class="button js-mute-button" hidden>Mute</button>
+      <button class="button js-volume-button">
+        <i class="fa fa-volume-off" aria-hidden="true"></i>
+      </button>
+      <button class="button js-mute-button" hidden>
+        <i class="fa fa-volume-up" aria-hidden="true"></i>        
+      </button>
       <button class="button js-fullscreen-button">Fullscreen</button>
     </div>   
 
