Button sizes have been increased

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       border-style:none; 
       cursor:pointer; color: white; 
       background-color: transparent;
+      font-size:  x-large;
     }
     .line-below {
       color: rgb(255, 255, 255);
