Added padding between buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       cursor:pointer; color: white; 
       background-color: transparent;
       font-size:  x-large;
+      padding: 1.2%;
+      margin: 5px 5px 5px 0px;
     }
     .line-below {
       color: rgb(255, 255, 255);
