--- a/index.html
+++ b/index.html
@@ -14,41 +14,43 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <style>
-    .player {
+    .video-player {
       display: flex;
       flex-direction:column;
-      width: 1000px; 
-      height: 800px;
+      width: 800px; 
+      height: 600px;
       box-shadow: 0 0 7px 4px;
     }
-    .container {
+    .video-player .player-container {
       flex-grow: 1;
     }
-    .background-button {
-      display: flex; 
+    .video-player .button-bar {
+      display: flex;
+      align-items: center;
       background-color:black;
     }
-    .button { 
+    .button-bar .control-button { 
       border-style:none; 
       cursor:pointer; color: white; 
       background-color: transparent;
       font-size:  x-large;
-      padding: 1.2%;
       margin: 5px 5px 5px 0px;
+      width: 35px;
+      height: 35px;
     }
-    .line-below {
+    .video-player .line-below {
       color: rgb(255, 255, 255);
       background-color: black;
       padding-top: 10px;
       padding-left: 4px;
       padding-bottom: 10px;
     }
-    .progress-bar{
+    .video-player .progress-bar{
       background-color: black;
       color: white;
       padding-left: 4px;
     }
-    .progress-dinamic-bar{
+    .progress-bar .progress-dinamic-bar{
       background-color: red;
     }
    </style>
@@ -56,23 +58,23 @@
 
 <body>
 
-  <div id="player" class="player">
-    <div class="container js-video-container"></div>
-    <div class="background-button">
-      <button class="button js-play-button">
+  <div id="player" class="video-player">
+    <div class="player-container js-video-container"></div>
+    <div class="button-bar">
+      <button class="control-button js-play-button">
         <i class="fa fa-play" aria-hidden="true"></i>
       </button>
-      <button class="button js-pause-button" hidden>
+      <button class="control-button js-pause-button" hidden>
         <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
-      <button class="button js-volume-button">
+      <button class="control-button js-volume-button">
         <i class="fa fa-volume-off" aria-hidden="true"></i>
       </button>
-      <button class="button js-mute-button" hidden>
+      <button class="control-button js-mute-button" hidden>
         <i class="fa fa-volume-up" aria-hidden="true"></i>        
       </button>
       <div style="flex-grow: 1;"></div>
-      <button class="button js-fullscreen-button">
+      <button class="control-button js-fullscreen-button">
         <i class="fa fa-expand" aria-hidden="true"></i>
       </button>
     </div>   
