--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       cursor:pointer; color: white; 
       background-color: transparent;
       font-size:  x-large;
-      margin: 5px 5px 5px 0px;
-      width: 35px;
-      height: 35px;
+      margin: 5px 4px 7px 0px;
+      width: 33px;
+      height: 33px;
+      font-size: 20px;
     }
     .video-player .line-below {
       color: rgb(255, 255, 255);
@@ -79,7 +80,7 @@
       </button>
     </div>   
 
-    <div class="line-below">
+    <!-- <div class="line-below">
       <span class="js-current-time"></span>
       —
       <span class="js-duration"></span>
@@ -87,7 +88,7 @@
 
     <div class="progress-bar js-progress">
       <div class="progress-dinamic-bar js-progress-slider">Прогресс</div>
-    </div>
+    </div> -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
