Added font style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
     .video-player {
       display: flex;
@@ -41,6 +44,7 @@
     }
     .button-bar .time-bar {
       flex-grow: 1;
+      font-family: 'Roboto', sans-serif;
       color: rgb(255, 255, 255);
       background-color: black;
       padding-top: 10px;
