--- a/index.html
+++ b/index.html
@@ -36,20 +36,19 @@
       border-style:none; 
       cursor:pointer; color: white; 
       background-color: transparent;
-      font-size:  x-large;
+      font-size: 20px;
       margin: 5px 4px 7px 0px;
       width: 33px;
       height: 33px;
-      font-size: 20px;
     }
     .button-bar .time-bar {
+      display: flex;
+      align-items: center;
       flex-grow: 1;
       font-family: 'Roboto', sans-serif;
       color: rgb(255, 255, 255);
       background-color: black;
-      padding-top: 10px;
-      padding-left: 4px;
-      padding-bottom: 10px;
+      padding: 8px 1px 10px 0px;
     }
     .video-player .progress-bar{
       background-color: black;
@@ -81,7 +80,7 @@
       </button>
       <div class="time-bar">
         <span class="js-current-time"></span>
-        —
+        <div style="flex-grow: 1;"> </div>
         <span class="js-duration"></span>      
       </div>
       <button class="control-button js-fullscreen-button">
