--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
       padding: 8px 1px 10px 0px;
     }
     .video-player .progress-bar{
+      flex-grow: 1;
       background-color: black;
       color: white;
       padding-left: 4px;
     }
-    .progress-bar .progress-dinamic-bar{
+    .progress-bar .progress-dinamic-bar{      
       background-color: red;
     }
    </style>
@@ -80,17 +81,15 @@
       </button>
       <div class="time-bar">
         <span class="js-current-time"></span>
-        <div style="flex-grow: 1;"> </div>
+        <div class="progress-bar js-progress">
+          <div class="progress-dinamic-bar js-progress-slider">Прогресс</div>
+        </div>
         <span class="js-duration"></span>      
       </div>
       <button class="control-button js-fullscreen-button">
         <i class="fa fa-expand" aria-hidden="true"></i>
       </button>
-    </div>   
-
-    <!-- <div class="progress-bar js-progress">
-      <div class="progress-dinamic-bar js-progress-slider">Прогресс</div>
-    </div> -->
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
