--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
       background-color: red;
       height: 5px;
       margin-left: 5px;
-      margin-right: 5px;
       border-radius: 2px;
     }
     .progress-bar .round-slider{
@@ -73,7 +72,8 @@
       border-color: white;
       border-style: solid;
       display: inline-block;
-      box-shadow: 0 0 2px 1px rgba(0,0,0,0.5); 
+      box-shadow: 0 0 2px 3px rgb(0 0 0 / 35%);
+      cursor: pointer;
     }
    </style>
 </head>
