add slider to video player

--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
       align-items: center;
       background-color: black;
       color: white;
-      padding-left: 4px;
+      margin-left: 10px;
+      margin-right: 7px;
     }
     .progress-bar .progress-dinamic-bar{      
       background-color: red;
       height: 5px;
-      margin-left: 5px;
       border-radius: 2px;
     }
     .progress-bar .round-slider{
-      height: 8px;
-      width: 8px;
+      height: 7px;
+      width: 7px;
+      margin-left: -7px;
       background-color: red;
       border-radius: 50%;
       border-color: white;
-      border-style: solid;
-      display: inline-block;
+      border-style: solid;      
       box-shadow: 0 0 2px 3px rgb(0 0 0 / 35%);
       cursor: pointer;
     }
