Added .button-bar:hover .round-slider

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       border-radius: 2px;
     }
     .progress-bar .round-slider{
-      height: 7px;
-      width: 7px;
+      height: 8px;
+      width: 8px;
       margin-left: -7px;
       background-color: red;
       border-radius: 50%;
@@ -74,6 +74,9 @@
       border-style: solid;      
       box-shadow: 0 0 2px 3px rgb(0 0 0 / 35%);
       cursor: pointer;
+    }
+    .button-bar:hover .round-slider{
+      background-color: blue;
     }
    </style>
 </head>
