Added opacity property in .round-slider style

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
       border-style: solid;      
       box-shadow: 0 0 2px 3px rgb(0 0 0 / 35%);
       cursor: pointer;
+      opacity: 0;
     }
     .button-bar:hover .round-slider{
-      background-color: blue;
+      opacity: 1;      
     }
    </style>
 </head>
