--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
   <style>
+    @import "normalize.css";
     .video-player {
       display: flex;
       flex-direction:column;
@@ -40,6 +42,9 @@
       margin: 5px 4px 7px 0px;
       width: 33px;
       height: 33px;
+    }
+    .button-bar .control-button:focus {
+      outline: none;
     }
     .button-bar .time-bar {
       display: flex;
